templates/whereabouts_template.yaml
---
# Source: whereabouts/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: release-name-whereabouts
  namespace: default
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: whereabouts
    app.kubernetes.io/version: 0.7.0
    helm.sh/chart: whereabouts-1.0.4
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: whereabouts
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
---
# Source: whereabouts/templates/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: release-name-whereabouts
  namespace: "default"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: whereabouts
    app.kubernetes.io/version: 0.7.0
    helm.sh/chart: whereabouts-1.0.4
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: whereabouts
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: whereabouts
        app.kubernetes.io/version: 0.7.0
        helm.sh/chart: whereabouts-1.0.4
      annotations:
    spec:
      
      hostNetwork: true
      serviceAccountName: release-name-whereabouts
      securityContext:
        fsGroup: 0
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: release-name
                    app.kubernetes.io/name: whereabouts
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      priorityClassName: ""
      automountServiceAccountToken: true
      containers:
        - name: whereabouts
          image: docker.io/bitnami/whereabouts:0.7.0-debian-12-r2
          imagePullPolicy: "IfNotPresent"
          command:
            - /bin/bash
          args:
            - -ec
            - |
              #!/bin/bash
              SLEEP=false bash /install-cni.sh && /ip-control-loop
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              drop:
              - ALL
            privileged: true
            readOnlyRootFilesystem: true
            runAsGroup: 0
            runAsNonRoot: false
            runAsUser: 0
            seLinuxOptions: null
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            exec:
              command:
                - pgrep
                - ip-control-loop
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            exec:
              command:
                - pgrep
                - ip-control-loop
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 5
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 1024Mi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: cni-bin-dir
              mountPath: /bitnami/whereabouts/host/opt/cni/bin
            - name: cni-net-dir
              mountPath: /bitnami/whereabouts/host/etc/cni/net.d
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: cni-bin-dir
          hostPath:
            path: /opt/cni/bin
        - name: cni-net-dir
          hostPath:
            path: /etc/cni/net.d
